// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toReceiveMessage > fails when called with an expected argument that is not a valid WS 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).not.toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the websocket object to be a valid WebSocketServer mock.
Received: string
  [31m"boom"[39m]
`;

exports[`.not.toReceiveMessage > fails when the WS server doesn't receive any messages 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).not.toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the websocket server to receive a message,
but it didn't receive anything in 1000ms.]
`;

exports[`.not.toReceiveMessage > fails when the WS server receives the un-expected message 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).not.toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the next received message to not equal:

  [32m"hello there"[39m

Received:

  [31m"hello there"[39m
]
`;

exports[`.toReceiveMessage > fails when called with an expected argument that is not a valid WS 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the websocket object to be a valid WebSocketServer mock.
Received: string
  [31m"boom"[39m]
`;

exports[`.toReceiveMessage > fails when the WS server does not receive the expected message 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the websocket server to receive a message,
but it didn't receive anything in 1000ms.]
`;

exports[`.toReceiveMessage > fails when the WS server does not receive the expected message with custom timeout 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the websocket server to receive a message,
but it didn't receive anything in 3000ms.]
`;

exports[`.toReceiveMessage > fails when the WS server receives a different message 1`] = `
[Error: [2mexpect([22m[31mWebSocketServer[39m[2m).toReceiveMessage([22m[32mexpected[39m[2m)[22m

Expected the next received message to equal:

  [32m"HI!"[39m

Received:

  [31m"hello there"[39m

Difference:

  [32m- Expected[39m
  [31m+ Received[39m
  [32m- HI![39m
  [31m+ hello there[39m
]
`;
